# malaketh-turbo

./: .gitignore  Cargo.toml  Makefile  README.md  compose.yaml
.github/workflows/: lint.yml  test.yml
app/: Cargo.toml
app/src/: app.rs  eth.rs  main.rs  node.rs  state.rs  store.rs  streaming.rs
app/src/store/: keys.rs
assets/: genesis.json
cli/: Cargo.toml
cli/src/: args.rs  config.rs  file.rs  lib.rs  logging.rs  new.rs
cli/src/cmd/: distributed_testnet.rs  init.rs  start.rs  testnet.rs
engine/: Cargo.toml
engine/src/: auth.rs  engine.rs  http.rs  json_structures.rs  lib.rs
scripts/: add_peers.sh  spawn-tmux.bash  spawn.bash
types/: Cargo.toml
types/proto/: consensus.proto
types/src/: address.rs  aliases.rs  context.rs  lib.rs  proposal_part.rs  signing.rs  validator_set.rs  value.rs  vote.rs
types/src/codec/proto/: mod.rs
