[workspace]
resolver = "2"

members = [
  "app",
  "cli",
  "types",
]

[workspace.package]
version      = "0.0.1"
edition      = "2021"
readme       = "README.md"
repository   = "https://github.com/informalsystems/malachite-reth"
license      = "Apache-2.0"
rust-version = "1.83"
publish      = false

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
overflow-checks = true

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[workspace.dependencies]
malachitebft-reth-app   = { version = "0.0.1", path = "app" }
malachitebft-reth-cli   = { version = "0.0.1", path = "cli" }
malachitebft-reth-types = { version = "0.0.1", path = "types" }

advisory-lock      = "0.3.0"
async-recursion    = "1.1"
async-trait        = "0.1.85"
axum               = "0.7"
base64             = "0.22.0"
bs58               = { version = "0.5.1", default-features = false }
bytes              = { version = "1", default-features = false }
byteorder          = "1.5"
bytesize           = "1.3"
clap               = "4.5"
color-eyre         = "0.6"
config             = { version = "0.14", features = ["toml"], default-features = false }
crc32fast          = "1.4.0"
criterion          = "0.5.1"
dashmap            = "6.1.0"
derive-where       = "1.2.7"
directories        = "5.0.1"
displaydoc         = { version = "0.2", default-features = false }
ed25519-consensus  = "2.1.0"
either             = "1"
eyre               = "0.6"
futures            = "0.3"
genawaiter         = { version = "0.99.1", default-features = false }
glob               = "0.3.0"
hex                = { version = "0.4.3", features = ["serde"] }
humantime          = "2.1.0"
humantime-serde    = "1.1.1"
itertools          = "0.13"
itf                = "0.2.3"
libp2p             = { version = "0.55.0", features = ["macros", "identify", "tokio", "ed25519", "ecdsa", "tcp", "quic", "noise", "yamux", "gossipsub", "dns", "ping", "metrics", "request-response", "cbor", "serde", "kad"] }
libp2p-identity    = "0.2.10"
libp2p-broadcast   = { version = "0.2.0", package = "libp2p-scatter" }
multiaddr          = "0.18.2"
multihash          = { version = "0.19.3", default-features = false }
nix                = { version = "0.29.0", features = ["signal"] }
num-bigint         = "0.4.4"
num-traits         = "0.2.17"
pretty_assertions  = "1.4"
prometheus-client  = "0.22"
prost              = "0.13"
prost-build        = "0.13"
prost-types        = "0.13"
ractor             = { version = "0.14.6", default-features = false, features = ["async-trait", "tokio_runtime"] }
rand               = { version = "0.8.5", features = ["std_rng"] }
rand_chacha        = "0.3.1"
redb               = "2.4.0"
seahash            = "4.1"
serde              = "1.0"
serde_json         = "1.0"
serde_with         = "3.9"
sha3               = "0.10"
signature          = "2.2.0"
tempfile           = "3.15.0"
testdir            = "0.9.1"
thiserror          = { version = "2.0", default-features = false }
tikv-jemallocator  = "0.6.0"
time               = "0.3"
tokio              = "1.43.0"
tokio-stream       = "0.1"
toml               = "0.8.19"
tracing            = "0.1.41"
tracing-appender   = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[workspace.dependencies.malachitebft-app]
package = "informalsystems-malachitebft-app"
version = "0.0.1"
git = "https://github.com/informalsystems/malachite.git"

[workspace.dependencies.malachitebft-app-channel]
package = "informalsystems-malachitebft-app-channel"
version = "0.0.1"
git = "https://github.com/informalsystems/malachite.git"

[workspace.dependencies.malachitebft-core-types]
package = "informalsystems-malachitebft-core-types"
version = "0.0.1"
git = "https://github.com/informalsystems/malachite.git"

[workspace.dependencies.malachitebft-core-consensus]
package = "informalsystems-malachitebft-core-consensus"
version = "0.0.1"
git = "https://github.com/informalsystems/malachite.git"

[workspace.dependencies.malachitebft-codec]
package = "informalsystems-malachitebft-codec"
version = "0.0.1"
git = "https://github.com/informalsystems/malachite.git"

[workspace.dependencies.malachitebft-config]
package = "informalsystems-malachitebft-config"
version = "0.0.1"
git = "https://github.com/informalsystems/malachite.git"

[workspace.dependencies.malachitebft-metrics]
package = "informalsystems-malachitebft-metrics"
version = "0.0.1"
git = "https://github.com/informalsystems/malachite.git"

[workspace.dependencies.malachitebft-proto]
package = "informalsystems-malachitebft-proto"
version = "0.0.1"
git = "https://github.com/informalsystems/malachite.git"

[workspace.dependencies.malachitebft-signing-ed25519]
package = "informalsystems-malachitebft-signing-ed25519"
version = "0.0.1"
git = "https://github.com/informalsystems/malachite.git"

[workspace.dependencies.malachitebft-sync]
package = "informalsystems-malachitebft-sync"
version = "0.0.1"
git = "https://github.com/informalsystems/malachite.git"
