[workspace]
resolver = "2"

members = [
  "app",
  "cli",
  "types",
]

[workspace.package]
version      = "0.0.1"
edition      = "2021"
readme       = "README.md"
repository   = "https://github.com/informalsystems/malachite-reth"
license      = "Apache-2.0"
rust-version = "1.83"
publish      = false

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
overflow-checks = true

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[workspace.dependencies]
malachitebft-reth-app   = { version = "0.0.1", path = "app" }
malachitebft-reth-cli   = { version = "0.0.1", path = "cli" }
malachitebft-reth-types = { version = "0.0.1", path = "types" }

async-trait        = "0.1.85"
axum               = "0.7"
bytes              = { version = "1", default-features = false }
bytesize           = "1.3"
clap               = "4.5"
color-eyre         = "0.6"
config             = { version = "0.14", features = ["toml"], default-features = false }
derive-where       = "1.2.7"
directories        = "5.0.1"
hex                = { version = "0.4.3", features = ["serde"] }
itertools          = "0.13"
itf                = "0.2.3"
prost              = "0.13"
prost-build        = "0.13"
prost-types        = "0.13"
rand               = { version = "0.8.5", features = ["std_rng"] }
redb               = "2.4.0"
serde              = "1.0"
serde_json         = "1.0"
sha3               = "0.10"
signature          = "2.2.0"
thiserror          = { version = "2.0", default-features = false }
tokio              = "1.43.0"
toml               = "0.8.19"
tracing            = "0.1.41"
tracing-appender   = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[workspace.dependencies.malachitebft-app]
package = "informalsystems-malachitebft-app"
branch = "romac/malachite-app-fixes"
git = "https://github.com/informalsystems/malachite.git"

[workspace.dependencies.malachitebft-app-channel]
package = "informalsystems-malachitebft-app-channel"
branch = "romac/malachite-app-fixes"
git = "https://github.com/informalsystems/malachite.git"

[workspace.dependencies.malachitebft-core-types]
package = "informalsystems-malachitebft-core-types"
branch = "romac/malachite-app-fixes"
git = "https://github.com/informalsystems/malachite.git"

[workspace.dependencies.malachitebft-core-consensus]
package = "informalsystems-malachitebft-core-consensus"
branch = "romac/malachite-app-fixes"
git = "https://github.com/informalsystems/malachite.git"

[workspace.dependencies.malachitebft-codec]
package = "informalsystems-malachitebft-codec"
branch = "romac/malachite-app-fixes"
git = "https://github.com/informalsystems/malachite.git"

[workspace.dependencies.malachitebft-config]
package = "informalsystems-malachitebft-config"
branch = "romac/malachite-app-fixes"
git = "https://github.com/informalsystems/malachite.git"

[workspace.dependencies.malachitebft-metrics]
package = "informalsystems-malachitebft-metrics"
branch = "romac/malachite-app-fixes"
git = "https://github.com/informalsystems/malachite.git"

[workspace.dependencies.malachitebft-proto]
package = "informalsystems-malachitebft-proto"
branch = "romac/malachite-app-fixes"
git = "https://github.com/informalsystems/malachite.git"

[workspace.dependencies.malachitebft-signing-ed25519]
package = "informalsystems-malachitebft-signing-ed25519"
branch = "romac/malachite-app-fixes"
git = "https://github.com/informalsystems/malachite.git"

[workspace.dependencies.malachitebft-sync]
package = "informalsystems-malachitebft-sync"
branch = "romac/malachite-app-fixes"
git = "https://github.com/informalsystems/malachite.git"
