[package]
name = "malachitebft-reth-engine"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
hex = "0.4"

rand ={ workspace = true }
color-eyre = { workspace = true }
jsonwebtoken = "9"
thiserror = "2.0.11"
ethereum_serde_utils = "0.7"
reqwest = { version = "0.12.2", default-features = false, features = ["blocking", "json", "stream", "rustls-tls", "native-tls-vendored"] }
zeroize = { version = "1", features = ["zeroize_derive"] }

malachitebft-reth-types = { workspace = true }
alloy-rpc-types         = { version = "0.11.0", features = ["eth"], default-features = false }
alloy-rpc-types-engine  = { workspace = true }
alloy-transport-http    = { version = "0.11.0", features = ["jwt-auth"] }
