[package]
name = "malachitebft-reth-types"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
malachitebft-app = { workspace = true }
malachitebft-codec = { workspace = true }
malachitebft-core-types = { workspace = true }
malachitebft-config = { workspace = true }
malachitebft-core-consensus = { workspace = true }
malachitebft-proto = { workspace = true }
malachitebft-signing-ed25519 = { workspace = true, features = ["rand", "serde"] }
malachitebft-sync = { workspace = true }

async-trait = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
sha3 = { workspace = true }
signature = { workspace = true }

alloy-consensus = { workspace = true }
alloy-primitives = { version = "0.8.21", default-features = false }
alloy-rpc-types-eth = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }

[lints]
workspace = true
